@@ -25,7 +25,6 @@ missing:
     suspend plugin didn't restore full-screen (is this wanted?)
     Option deinterlace off / deinterlace force!
     ColorSpace aren't configurable with the gui.
-    Inverse telecine isn't configurable with the gui.
     Replay of old vdr 1.6 recordings.
     svdrp support for hot-keys.
 
